--- a/homework8/style/style.css
+++ b/homework8/style/style.css
@@ -218,9 +218,6 @@ div.search > a{
     margin-top: 170px;
 }
 
-.product {
-}
-
 .product-item {
     padding: 20px;
     box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
@@ -247,6 +244,7 @@ div.search > a{
 }
 
 .card-text {
+    margin-bottom: auto;
     color: #2B2D36;
 }
 
@@ -277,9 +275,7 @@ input[type="radio"]:checked + label {
 
 .price {
     margin-left: 0;
-    position: absolute;
     bottom: 0;
-    margin-bottom: 20px;
 }
 
 .btn-buy{
